# python-teamcity

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: codeql.yml
examples/: example_build.py  example_change.py  example_const.py  example_project.py  example_test.py  sample.py
teamcity/: __init__.py  teamcity.py  teamcity_const.py
