[metadata]
name = python-teamcity
version = 0.1.0.1122
author = Yunlin Tan
author_email = tanyunlin2003@norbread.com
summary = Python API for triggering TeamCity by REST API
description-file = README.md
license = GPL
home-page = https://github.com/norbread2003/python-teamcity
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    teamcity