[metadata]
name = python-teamcity
version = 0.1.9
author = Yunlin Tan
author_email = tanyunlin2003@norbread.com
summary = Python library for triggering TeamCity by REST API
description-file = README.md
license = MIT
home-page = https://github.com/norbread2003/python-teamcity
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    teamcity